--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             button {
                 padding: 5%;
                 font-size: 5rem;
+                font-weight: 900;
             }
         </style>
     </head>
@@ -44,7 +45,7 @@
                 //
                 // Display the Bluetooth devices to pair.
                 navigator.bluetooth.requestDevice(options).then(devices =>{
-                    console.log('Name: ' + device.name)
+                    console.log(devices)
                 }).catch(error => {
                     console.log('Request device error: ' + error)
                 })
